# Course-Planner

./: .gitignore  README.md  pyproject.toml
src/: get_ratings.js  main.py  ratings.json
