[tool.poetry]
name = "course-planner"
version = "0.1.0"
description = "A Linear Programming (LP) approach to selecting the optimal 10-course plan for the Georgia Tech OMSCS program."
authors = ["ChosenQuill"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pulp = "^2.9.0"


[build-system]
requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
